Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>Just a bit of space.</p>
+      <p>You could read this page, or you could head over to <a href="http://www.metafilter.com">MetaFilter</a> instead. It's <em>much</em> more interesting. <a href="https://www.metafilter.com/user/170113">(My profile.)</a></p>
 
       <footer class="site-footer">
 
